PZS-NG CHANGELOG
----------------

v1.2.0  --> 1.2.x :
		- Change hardcoded limit for justification in sitebot announces from 2 to 3 (thanks to h-0-s-h)
		- Fix incomplete-list.sh and cleanup to not use chroot()
		- Fix psxc-imdb for new site layout
		- Fix bad parsing of certain loglines with glftpd -X mode (thanks to iknowmarkers for reporting).
		- Add support for PUBM and MSGM binds in the blow script.
		- Improve handling of env vars
		- Fix speedtestfile being deleted when filename is same as it's size in MiB + "MiB" (and speedtest_delfile is false).
		- Correct shown size of speedtestfiles in ftpclient output and target filename.
		- Fix *-missing files appearing in nocheck_dirs and non-zip_dirs/sfv_dirs/group_dirs.
		- Use updated versionnumber, using git-files if present (thanks to tittof for init).
		- Fix segfault when zip_completebar is DISABLED (thanks to kniffy for reporting).
		- Prevent bufferoverflows for FLAC bitrate and samplingrate.
		- Add extra options for output of the stats, allowing hiding of users, groups and/or zerodata.
		- Fix psxc-imdb.sh having trailing '|' for some vars (thanks to silv3rr for the language-var).
		- Fix Blow.tcl not storing keys for channels and users with certain special chars in (thanks to ParAd0x^)
		- Fix Blow.tcl not responding to encrypted messages when keyx is disabled (will use default key).
		- Fix wrong release type being used, sometimes causing leftover progressbars. (thanks to tittof, crx and jochar for noticing).
		- ^--- 2017 ---^
		- Improve ngBot's login.log parsing for bad usernames.
		- Add option to disable specified announces caused by triggers. See ngBot.conf.defaults.
		- Refactor Blow.tcl, remove topic trigger binds if unwanted, add Blow.zpt for *TOPIC.
		- Fix ngBot reloading on userfile reloads caused by botnet userfile sharing.
		  This had possible negative side-effects in plugins.
		- Fix ngBot logoutput of amount of plugins loaded when only 1 is loaded.