@@ -2,6 +2,7 @@ PZS-NG CHANGELOG
 ----------------
 
 v1.2.0  --> 1.2.x :
+		- Fix TVMaze to work with newer Tcl packages (thanks to teqnodude for reporting)
 		- Change hardcoded limit for justification in sitebot announces from 2 to 3 (thanks to h-0-s-h)
 		- Fix incomplete-list.sh and cleanup to not use chroot()
 		- Fix psxc-imdb for new site layout
